--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-dashboard/dist/
-dashboard/.vite/
+frontend/dist/
+frontend/.vite/
 
 # IDEs
 .vscode/
@@ -27,21 +27,26 @@ dashboard/.vite/
 *~
 
 # Logs
-logs/*.log
+backend/logs/*.log
 *.log
 
 # Data
-data/*.json
-models/*.pkl
+backend/data/*.json
+!backend/data/.gitkeep
+backend/models/*.pkl
+!backend/models/.gitkeep
 
 # OS
 .DS_Store
 Thumbs.db
 
 # Config (sensitive)
-config/vpn_profiles/*.ovpn
-!config/vpn_profiles/default.ovpn
+backend/config/vpn_profiles/*.ovpn
+!backend/config/vpn_profiles/default.ovpn
 
 # Environment
 .env
 .env.local
+
+# Keep empty directories
+!**/.gitkeep
