--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,10 +3,12 @@
 
 # Packet Processing
 scapy==2.5.0
+pyshark==0.6
+dpkt==1.9.8
+netifaces==0.11.0
 
-# Machine Learning
-scikit-learn==1.3.0
-joblib==1.3.2
+# Phase 1 note: ML dependencies are optional and excluded to improve compatibility
+# For anomaly detection (Phase 3), install extras from requirements-ml.txt
 
 # API Framework
 flask==3.0.0
@@ -18,6 +20,9 @@ python-socketio==5.10.0
 
 # Configuration
 pyyaml==6.0.1
+
+# Database
+sqlalchemy==2.0.23
 
 # Logging (built-in, but optional enhanced logging)
 # python-json-logger==2.0.7
