--- a/backend/requirements-ml.txt
+++ b/backend/requirements-ml.txt
@@ -2,7 +2,18 @@
 # Note: scikit-learn wheels may not be available for Python 3.14 yet.
 # Recommended Python: 3.10–3.12
 
+# Phase 3: Anomaly Detection
 scikit-learn==1.3.0
 joblib==1.3.2
 pandas==2.0.3
 numpy==1.24.3
+
+# Phase 4: ML-Based DPI Packet Analyzer
+torch>=2.0.0
+transformers>=4.30.0
+
+# Optional: Accelerate for faster inference
+# accelerate>=0.20.0
+
+# Note: For GPU support, install torch with CUDA:
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
