--- a/backend/requirements-ml.txt
+++ b/backend/requirements-ml.txt
@@ -1,12 +1,11 @@
 # Optional ML dependencies (Phase 3+)
-# Note: scikit-learn wheels may not be available for Python 3.14 yet.
-# Recommended Python: 3.10–3.12
+# Compatible with Python 3.10-3.14
 
 # Phase 3: Anomaly Detection
-scikit-learn==1.3.0
-joblib==1.3.2
-pandas==2.0.3
-numpy==1.24.3
+scikit-learn>=1.5.0
+joblib>=1.4.0
+pandas>=2.2.0
+numpy>=1.26.0
 
 # Phase 4: ML-Based DPI Packet Analyzer
 torch>=2.0.0
@@ -16,4 +15,4 @@ transformers>=4.30.0
 # accelerate>=0.20.0
 
 # Note: For GPU support, install torch with CUDA:
-# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
